gcc/testsuite/gdc.test/compilable/test12567b.d
// REQUIRED_ARGS:
// PERMUTE_ARGS:
deprecated("message")
module test12567b;

void main() {}
